--- a/metadata.yaml
+++ b/metadata.yaml
@@ -60,5 +60,6 @@ subjects:
 - !lcc 'PZ'
 - !lcc 'PT'
 - !lcsh 'Fairy tales -- Germany'
+- GITenberg
 title: 'Sprookjes: Tweede verzameling'
 url: http://www.gutenberg.org/ebooks/22555
